@@ -389,8 +389,13 @@ class CForm extends CFormElement implements ArrayAccess
 				$class='CActiveForm';
 			$options['action']=$this->action;
 			$options['method']=$this->method;
-			foreach($this->attributes as $name=>$value)
-				$options[$name]=$value;
+			if(isset($options['htmlOptions']))
+			{
+				foreach($this->attributes as $name=>$value)
+					$options['htmlOptions'][$name]=$value;
+			}
+			else
+				$options['htmlOptions']=$options;
 			ob_start();
 			$this->_activeForm=$this->getOwner()->beginWidget($class, $options);
 			return ob_get_clean() . "<div style=\"visibility:hidden\">".CHtml::hiddenField($this->getUniqueID(),1)."</div>\n";
