@@ -4,6 +4,7 @@
 
 Version 1.1.2 to be released
 ----------------------------
+- Bug #1006: Setting CForm::attributes may cause exception (Qiang)
 - Enh: CCaptchaAction now supports unlimited tests by setting its testLimit to be 0 (Qiang)
 
 Version 1.1.1 March 14, 2010
